--- a/public/PLUGINS/ivyMenu/tmpl_superfish/css/superfish.css
+++ b/public/PLUGINS/ivyMenu/tmpl_superfish/css/superfish.css
@@ -75,13 +75,17 @@
     border: 0px solid black;
     zoom: 1
 }
+.sf-menu > li > a:hover{
+    text-shadow: 0px 0px 2px #000000;
+}
+
 .sf-menu > li > ul > li {
     /*background-color: rgba(255,255,255,0.6);*/
 }
 .sf-menu > li > ul > li > a{
 
     color: #8f8f8f;
-    color: #333333;
+    /*color: #333333;*/
     opacity: 1;
     /*text-shadow: 1px 1px 0px #333333;*/
     text-transform: uppercase;
@@ -93,7 +97,7 @@
 }
 
 .sf-menu > li > ul > li > a:hover{
-    color: #000000;
+    color: #333333;
 }
 
 .sf-menu li {
