--- a/public/PLUGINS/ivyMenu/tmpl_superfish/css/superfish.css
+++ b/public/PLUGINS/ivyMenu/tmpl_superfish/css/superfish.css
@@ -69,7 +69,7 @@
     color: #ffffff;
     text-transform: uppercase;
     font-size: 16px;
-    font-family: 'Open Sans';
+    /*font-family: 'Open Sans';*/
     font-weight: bold;
     text-decoration:none;
     padding: 10px 10px 32px 10px;
