--- a/public/PLUGINS/ivyMenu/tmpl_superfish/css/superfish.css
+++ b/public/PLUGINS/ivyMenu/tmpl_superfish/css/superfish.css
@@ -38,6 +38,7 @@
 /*** DEMO SKIN ***/
 .sf-menu {
     float: right;
+    top: 20px;
    /* margin-bottom: 1em;*/
 }
 
@@ -72,7 +73,7 @@
     /*font-family: 'Open Sans';*/
     font-weight: bold;
     text-decoration:none;
-    padding: 10px 10px 32px 10px;
+    padding: 10px 10px 12px 10px;
     border: 0px solid black;
     zoom: 1
 }
