--- a/public/MODELS/gallery/tmpl_tribalFest/css/demo-style.css
+++ b/public/MODELS/gallery/tmpl_tribalFest/css/demo-style.css
@@ -9,10 +9,10 @@ our demo gets from this sheet) */
     height: 100%;
     /*left: 50%;
     margin: -300px 0 0 -470px;*/ }
-    div.orbit-wrapper {
+   /* div.orbit-wrapper {
         width: 100% ;
         height: 100%;
-}
+}*/
     #featured {
         width: 100% ;
         height: 100%;
