--- a/public/MODELS/blog/tmpl_bsea/css/blogBsea.css
+++ b/public/MODELS/blog/tmpl_bsea/css/blogBsea.css
@@ -5,3 +5,10 @@
 /* blogPrevRecord.html */
 .blogPrev-lead {margin-bottom: 20px;}
 .blogPrev-content {margin-bottom: 20px;}
+
+.fullImage,
+.blogRecords .record .blogPrev-content img{
+    width: 100% !important;
+    height: initial !important;
+}
+
