--- a/public/PLUGINS/feedback/css/feedback.css
+++ b/public/PLUGINS/feedback/css/feedback.css
@@ -18,7 +18,7 @@
 }
 
     .ivy-feedback-mess .fb{
-        min-height: 30px;
+        min-height: 20px;
         padding: 10px;
         margin: 10px 5px;
 
@@ -61,7 +61,7 @@
 
        .ivy-feedback-mess .fb .fb_mess{
            display: inline-block;
-           height: 50px;
+           /*height: 50px;*/
            overflow-y: hidden;
        }
 
