A bunch of small and medium fixes of all kind :-)

--- a/public/MODELS/blog/tmpl_bsea/css/blogBsea.css
+++ b/public/MODELS/blog/tmpl_bsea/css/blogBsea.css
@@ -8,7 +8,7 @@
 
 .fullImage,
 .blogRecords .record .blogPrev-content img{
-    width: 100% !important;
+    max-width: 100% !important;
     height: initial !important;
 }
 
