--- a/public/MODELS/blog/tmpl_bsea/css/blogBsea.css
+++ b/public/MODELS/blog/tmpl_bsea/css/blogBsea.css
@@ -18,6 +18,7 @@
 
 }
 
+
 .SGrecord .content{
     font-family: "futura-pt", Arial, sans-serif;
     font-size: 17px;
@@ -25,6 +26,10 @@
     color: #333;
     font-weight: 200;
 }
+.SGrecord-archive .content p {
+    width: 75%;
+}
+
 .notPublished {text-transform: lowercase !important; color: darkgray; font-style: italic;}
 
 #sharepanel .addthis_toolbox {
