--- a/public/MODELS/blog/tmpl_bsea/ADMIN/css/css_archiveRecord/token-input.css
+++ b/public/MODELS/blog/tmpl_bsea/ADMIN/css/css_archiveRecord/token-input.css
@@ -3,15 +3,15 @@ ul.token-input-list {
     overflow: hidden; 
     height: auto !important; 
     height: 1%;
-    width: 400px;
-    border: 1px solid #999;
+    width: 100%;
+    /*border: 1px solid #999;*/
     cursor: text;
-    font-size: 12px;
+    font-size: 11px;
     font-family: Verdana;
     z-index: 999;
     margin: 0;
     padding: 0;
-    background-color: #fff;
+    background-color: rgba(255,255,255,0.5);
     list-style-type: none;
     clear: left;
 }
@@ -34,7 +34,7 @@ li.token-input-token {
     height: 1%;
     margin: 3px;
     padding: 3px 5px;
-    background-color: #d0efa0;
+    background-color: #ddd;
     color: #000;
     font-weight: bold;
     cursor: default;
@@ -64,7 +64,7 @@ li.token-input-selected-token span {
 
 div.token-input-dropdown {
     position: absolute;
-    width: 400px;
+    width: 215px;
     background-color: #fff;
     overflow: hidden;
     border-left: 1px solid #ccc;
@@ -108,6 +108,10 @@ div.token-input-dropdown ul li em {
 }
 
 div.token-input-dropdown ul li.token-input-selected-dropdown-item {
-    background-color: #d0efa0;
+    background-color: #c9d0dd;
 }
 
+ul li.token-input-input-token {
+    border: 1px solid #ccc;
+    margin: 5px 3px;
+}
