--- a/public/MODELS/blog/tmpl_bsea/ADMIN/css/Ablog.css
+++ b/public/MODELS/blog/tmpl_bsea/ADMIN/css/Ablog.css
@@ -12,7 +12,7 @@
     .leadSec{ height: 70px; width: 180px;}
 
 .SGrecord {/*width: 1000px;*/ position: relative;}
-.SGrecord .title{width: 300px;}
+.SGrecord .title{width: 100%;}
 .SGrecord .lead{min-height: 90px;}
 .SGrecord .content{min-height: 500px;}
 .SGrecord .recordTags{width: 220px;}
