--- a/public/MODELS/blog/tmpl_bsea/css/blogBsea.css
+++ b/public/MODELS/blog/tmpl_bsea/css/blogBsea.css
@@ -27,11 +27,19 @@
     font-weight: 200;
 }
 .SGrecord-archive .content  {
-    width: 75%;
+    width: 65%;
 }
+.SGrecord-archive div[id^="cke_editor_content"]{float: right;}
 
 .notPublished {text-transform: lowercase !important; color: darkgray; font-style: italic;}
 
 #sharepanel .addthis_toolbox {
     margin-top: -6px !important;
+}
+
+.ivy-closeButton-canvas{
+    background: rgba(255,255,255,0.8);
+    height: 27px;
+    padding: 3px 0px 0px 0px;
+    border-radius: 5px;
 }
